[gd_scene load_steps=131 format=2]

[ext_resource path="res://Tileset/confettiSheet.png" type="Texture" id=1]
[ext_resource path="res://scripts/ConfettiSpawn.gd" type="Script" id=2]
[ext_resource path="res://tada.mp3" type="AudioStream" id=3]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 498, 280 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 0, 498, 280 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 0, 498, 280 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 0, 498, 280 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 0, 498, 280 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 280, 498, 280 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 280, 498, 280 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 280, 498, 280 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 280, 498, 280 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 280, 498, 280 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 560, 498, 280 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 560, 498, 280 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 560, 498, 280 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 560, 498, 280 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 560, 498, 280 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 840, 498, 280 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 840, 498, 280 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 840, 498, 280 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 840, 498, 280 )

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 840, 498, 280 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1120, 498, 280 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 1120, 498, 280 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 1120, 498, 280 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 1120, 498, 280 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 1120, 498, 280 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1400, 498, 280 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 1400, 498, 280 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 1400, 498, 280 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 1400, 498, 280 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 1400, 498, 280 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1680, 498, 280 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 1680, 498, 280 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 1680, 498, 280 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 1680, 498, 280 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 1680, 498, 280 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 1960, 498, 280 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 1960, 498, 280 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 1960, 498, 280 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 1960, 498, 280 )

[sub_resource type="AtlasTexture" id=40]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 1960, 498, 280 )

[sub_resource type="AtlasTexture" id=41]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2240, 498, 280 )

[sub_resource type="AtlasTexture" id=42]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 2240, 498, 280 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 2240, 498, 280 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 2240, 498, 280 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 2240, 498, 280 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2520, 498, 280 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 2520, 498, 280 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 2520, 498, 280 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 2520, 498, 280 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 2520, 498, 280 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 2800, 498, 280 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 2800, 498, 280 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 2800, 498, 280 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 2800, 498, 280 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 2800, 498, 280 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3080, 498, 280 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 3080, 498, 280 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 3080, 498, 280 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 3080, 498, 280 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 3080, 498, 280 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3360, 498, 280 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 3360, 498, 280 )

[sub_resource type="AtlasTexture" id=63]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 3360, 498, 280 )

[sub_resource type="AtlasTexture" id=64]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 3360, 498, 280 )

[sub_resource type="AtlasTexture" id=65]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 3360, 498, 280 )

[sub_resource type="AtlasTexture" id=66]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3640, 498, 280 )

[sub_resource type="AtlasTexture" id=67]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 3640, 498, 280 )

[sub_resource type="AtlasTexture" id=68]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 3640, 498, 280 )

[sub_resource type="AtlasTexture" id=69]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 3640, 498, 280 )

[sub_resource type="AtlasTexture" id=70]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 3640, 498, 280 )

[sub_resource type="AtlasTexture" id=71]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 3920, 498, 280 )

[sub_resource type="AtlasTexture" id=72]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 3920, 498, 280 )

[sub_resource type="AtlasTexture" id=73]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 3920, 498, 280 )

[sub_resource type="AtlasTexture" id=74]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 3920, 498, 280 )

[sub_resource type="AtlasTexture" id=75]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 3920, 498, 280 )

[sub_resource type="AtlasTexture" id=76]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4200, 498, 280 )

[sub_resource type="AtlasTexture" id=77]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 4200, 498, 280 )

[sub_resource type="AtlasTexture" id=78]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 4200, 498, 280 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 4200, 498, 280 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 4200, 498, 280 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4480, 498, 280 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 4480, 498, 280 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 4480, 498, 280 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 4480, 498, 280 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 4480, 498, 280 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 4760, 498, 280 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 4760, 498, 280 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 4760, 498, 280 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 4760, 498, 280 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 4760, 498, 280 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5040, 498, 280 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 5040, 498, 280 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 5040, 498, 280 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 5040, 498, 280 )

[sub_resource type="AtlasTexture" id=95]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 5040, 498, 280 )

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5320, 498, 280 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 5320, 498, 280 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 5320, 498, 280 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 5320, 498, 280 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 5320, 498, 280 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5600, 498, 280 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 5600, 498, 280 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 5600, 498, 280 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 5600, 498, 280 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 5600, 498, 280 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 5880, 498, 280 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 5880, 498, 280 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 5880, 498, 280 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 5880, 498, 280 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 5880, 498, 280 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 6160, 498, 280 )

[sub_resource type="AtlasTexture" id=112]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 6160, 498, 280 )

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 6160, 498, 280 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 6160, 498, 280 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 6160, 498, 280 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 6440, 498, 280 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 6440, 498, 280 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 6440, 498, 280 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 6440, 498, 280 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 6440, 498, 280 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 6720, 498, 280 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 6720, 498, 280 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 996, 6720, 498, 280 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1494, 6720, 498, 280 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1992, 6720, 498, 280 )

[sub_resource type="SpriteFrames" id=126]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ), SubResource( 42 ), SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ), SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ), SubResource( 63 ), SubResource( 64 ), SubResource( 65 ), SubResource( 66 ), SubResource( 67 ), SubResource( 68 ), SubResource( 69 ), SubResource( 70 ), SubResource( 71 ), SubResource( 72 ), SubResource( 73 ), SubResource( 74 ), SubResource( 75 ), SubResource( 76 ), SubResource( 77 ), SubResource( 78 ), SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ), SubResource( 95 ), SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ), SubResource( 112 ), SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ) ],
"loop": false,
"name": "New Anim",
"speed": 25.0
} ]

[sub_resource type="RectangleShape2D" id=127]
extents = Vector2( 47, 32 )

[node name="ConfettiSpawner" type="Area2D"]
script = ExtResource( 2 )

[node name="Confetti" type="AnimatedSprite" parent="."]
visible = false
scale = Vector2( 2.80714, 2.80714 )
frames = SubResource( 126 )
animation = "New Anim"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 127 )

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="animation_finished" from="Confetti" to="." method="_on_Confetti_animation_finished"]
[connection signal="finished" from="AudioStreamPlayer2D" to="." method="_on_AudioStreamPlayer2D_finished"]
